--- a/i18n/languages/woocommerce-gravityforms-product-addons.pot
+++ b/i18n/languages/woocommerce-gravityforms-product-addons.pot
@@ -2,10 +2,10 @@
 # This file is distributed under the GNU General Public License v3.0.
 msgid ""
 msgstr ""
-"Project-Id-Version: WooCommerce - Gravity Forms Product Add-Ons 3.3.2\n"
+"Project-Id-Version: WooCommerce Gravity Forms Product Add-Ons 3.3.3\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/gravityforms-product-addons\n"
-"POT-Creation-Date: 2018-06-05 13:19:37+00:00\n"
+"POT-Creation-Date: 2018-06-29 13:33:30+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -676,7 +676,7 @@ msgid "This field is required."
 msgstr ""
 
 #. Plugin Name of the plugin/theme
-msgid "WooCommerce - Gravity Forms Product Add-Ons"
+msgid "WooCommerce Gravity Forms Product Add-Ons"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
